--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/1492f2332e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Heroes</title>
 </head>
@@ -14,37 +14,54 @@
         <h1 class="titulo">Heores</h1>
     </header>
     <main>
-        <section class="card">
-            <img src="img/fondo-batman.png" alt="">
-            <img src="img/corazon.svg" alt="" class="corazon">
-            <img src="img/batman.png" alt="" class="heroe">
-            <h3>BATMAN</h3>
-            <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing
-            </p>
-            <button>Ver Más</button>
-        </section>
-        <section class="card">
-            <img src="img/fondo-harley.png" alt="">
-            <img src="img/corazon.svg" alt="" class="corazon">
-            <img src="img/harley.png" alt="" class="heroe">
-            <h3>Harley Quinn</h3>
-            <p>La creación de Harley Quinn fue una idea de último minuto propuesta por el escritor estadounidense Paul Dini para modificar una escena del vigésimo-segundo episodio de Batman: la serie animada
-            </p>
-            <button>Ver Más</button>
-        </section>
-        <section class="card">
-            <img src="img/fondo-batman.png" alt="">
-            <img src="img/corazon.svg" alt="" class="corazon">
-            <img src="img/batman.png" alt="" class="heroe">
-            <h3>BATMAN</h3>
-            <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing
-            </p>
-            <button>Ver Más</button>
+        <section>
+            <article >
+                <div class="bg-headerCard batman1">
+                    <i class="fas fa-heart"></i>   
+                </div>
+                <img src="img/batman.png" alt="" class="heroe">
+                <h3>BATMAN</h3>
+                <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing
+                </p>
+                <button>Ver Más</button>
+            </article>
+            <article>
+                <div class="bg-headerCard harley">
+                    <i class="fas fa-heart"></i>   
+                </div>
+             <img src="img/harley.png" alt="" class="heroe">
+                <h3>Harley Quinn</h3>
+                <p>La creación de Harley Quinn fue una idea de último minuto propuesta por el escritor estadounidense Paul Dini para modificar una escena del vigésimo-segundo episodio de Batman: la serie animada
+                </p>
+                <button>Ver Más</button>
+            </article>
+            <article >
+                <div class="bg-headerCard batman1">
+                    <i class="fas fa-heart"></i>   
+                </div>               
+                <img src="img/batman.png" alt="" class="heroe">
+                <h3>BATMAN</h3>
+                <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing
+                </p>
+                <button>Ver Más</button>
+            </article>
+            <article class="oculta">
+                <div class="bg-headerCard harley">
+                    <i class="fas fa-heart"></i>   
+                </div>
+             <img src="img/harley.png" alt="" class="heroe">
+                <h3>Harley Quinn</h3>
+                <p>La creación de Harley Quinn fue una idea de último minuto propuesta por el escritor estadounidense Paul Dini para modificar una escena del vigésimo-segundo episodio de Batman: la serie animada
+                </p>
+                <button>Ver Más</button>
+            </article>
         </section>
         
     </main>
     <footer>
+        <div class="espacio"></div>
         <p>Todos los derechos reservados a FRONT END 1</p>
+        <img src="img/github-logo.svg" alt="">
     </footer>
 </body>
 </html>
