agregando pages de formularios

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <header>
         <div class="descuento">Descuentos 20%</div>
         <h1 class="titulo">Heores</h1>
+        <div class="nav-bar"> 
+            <nav>
+                <ul>
+                    <li> <a href="pages/contacto.html"> Contacto </a></li>
+                    <li>  <a href="pages/registro.html">Registrarme</a></li>
+                    <li> <a href="pages/log-in.html">Ingresar</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <section>
